--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 	border-radius: 16px;
 	background: #fff;
 	min-height: 100vh;
-	padding-top: 32px;
+	padding-top: 24px;
 }
 
 .card {
@@ -23,6 +23,16 @@
 	letter-spacing: 0.374px;
 }
 
+.text-manrope-white {
+	color: var(--system-background-dark-elevated-primary, #fff);
+	font-family: Manrope-Light;
+	font-size: 48px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 56px;
+	letter-spacing: 0.374px;
+}
+
 .text-manrope-medium {
 	color: #1c1c1e;
 	font-family: Manrope-Light;
@@ -35,6 +45,26 @@
 
 .text-manrope-small {
 	color: #9999a3;
+	font-family: Manrope-Light;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 20px;
+	letter-spacing: 0.374px;
+}
+
+.text-manrope-medium-light {
+	color: #ffffff;
+	font-family: Manrope-Light;
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 32px;
+	letter-spacing: 0.374px;
+}
+
+.text-manrope-small-light {
+	color: #ebebf599;
 	font-family: Manrope-Light;
 	font-size: 14px;
 	font-style: normal;
