--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
 	border-radius: 16px;
 	background: #fff;
 	min-height: 100vh;
-	padding-top: 24px;
 }
 
 .card {
@@ -17,11 +16,6 @@
 	gap: 24px;
 }
 
-.slick-slider.slick-initialized {
-	max-width: 50vw;
-	width: 100%;
-}
-
 @media screen and (max-width: 2560px) {
 	.slick-slider.slick-initialized {
 		max-width: 46vw;
@@ -31,7 +25,7 @@
 
 @media screen and (max-width: 1920px) {
 	.slick-slider.slick-initialized {
-		max-width: 63vw;
+		max-width: 75.5vw;
 		width: 100%;
 	}
 }
@@ -48,7 +42,7 @@
 
 @media screen and (max-width: 768px) {
 	section#about-us {
-		width: 630px;
+		width: 100%;
 	}
 	span#item-name {
 		width: 285px;
@@ -57,21 +51,18 @@
 
 @media screen and (max-width: 992px) {
 	section#about-us {
-		width: 630px;
-	}
-	img#vector-img {
-		width: 580px;
+		width: 70%;
 	}
 }
 
 @media screen and (max-width: 320px) {
 	section#about-us {
-		width: 328px;
-		margin-bottom: 125px;
+		width: 100%;
 	}
-	div#text-about-us {
-		height: 175px;
+	img#info-about {
+		width: 200px;
 	}
+
 	div#how-it-works-cards {
 		width: 310px;
 		height: 160px;
@@ -89,6 +80,10 @@
 @media screen and (max-width: 576px) {
 	div#how-it-works-cards {
 		width: 250px;
+	}
+	section#about-us {
+		width: 87%;
+		margin-bottom: 250px;
 	}
 }
 
