--- a/src/App.scss
+++ b/src/App.scss
@@ -62,14 +62,16 @@
 	img#info-about {
 		width: 200px;
 	}
-
+	header {
+		padding: 16px;
+	}
 	div#how-it-works-cards {
 		width: 310px;
 		height: 160px;
 	}
 	img#dub-x-logo {
 		padding: 0;
-		width: 70px;
+		width: 100px;
 		height: 80px;
 	}
 	div#nav-div {
