--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,14 @@
 	gap: 24px;
 }
 
+section#ad-modern-way {
+	padding: 0 110px;
+}
+
+section#properties {
+	padding: 160px 110px;
+}
+
 @media screen and (max-width: 2560px) {
 	.slick-slider.slick-initialized {
 		max-width: 46vw;
@@ -58,6 +66,13 @@
 @media screen and (max-width: 320px) {
 	section#about-us {
 		width: 100%;
+	}
+	section#ad-modern-way {
+		padding: 0;
+	}
+
+	section#properties {
+		padding: 80px 0;
 	}
 	img#info-about {
 		width: 200px;
