--- a/src/App.scss
+++ b/src/App.scss
@@ -68,7 +68,8 @@ section#properties {
 		width: 100%;
 	}
 	section#ad-modern-way {
-		padding: 0;
+		width: 100%;
+		padding: 24px 0;
 	}
 
 	section#properties {
