--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,40 @@
 	color: #888;
 }
 
+.global-loader {
+	position: fixed;
+	width: 100%;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.3);
+	z-index: 9999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	&::after {
+		content: '';
+		width: 65px;
+		height: 65px;
+		border-radius: 50%;
+		display: inline-block;
+		border-top: 3px solid #11b7b3;
+		border-right: 3px solid transparent;
+		animation: rotation 1s linear infinite;
+	}
+
+	@keyframes rotation {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+}
+
 .slick-slide {
 	gap: 24px;
 }
