--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@
 	right: 0;
 	top: 0;
 	bottom: 0;
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgb(255, 255, 255, 0.98);
 	z-index: 9999;
 	display: flex;
 	align-items: center;
@@ -50,12 +50,8 @@
 	gap: 24px;
 }
 
-section#ad-modern-way {
+header {
 	padding: 0 110px;
-}
-
-section#properties {
-	padding: 160px 110px;
 }
 
 @media screen and (max-width: 2560px) {
@@ -67,7 +63,7 @@ section#properties {
 
 @media screen and (max-width: 1920px) {
 	.slick-slider.slick-initialized {
-		max-width: 75.5vw;
+		max-width: 78vw;
 		width: 100%;
 	}
 }
@@ -79,6 +75,18 @@ section#properties {
 	}
 	header {
 		padding: 0 50px;
+	}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1920px) {
+	section#ad-modern-way {
+		padding: 50px 110px;
+	}
+	div#modern-way-block {
+		width: 50%;
+	}
+	section#properties {
+		padding: 160px 110px;
 	}
 }
 
@@ -95,10 +103,23 @@ section#properties {
 	section#about-us {
 		width: 70%;
 	}
+	section#properties {
+		padding: 80px 24px;
+	}
+	header {
+		padding: 0 24px;
+	}
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 540px) {
 	section#about-us {
+		width: 100%;
+	}
+	div#privacy-policy {
+		flex-direction: column;
+	}
+	div#modern-way-block {
+		padding: 0 16px;
 		width: 100%;
 	}
 	section#ad-modern-way {
@@ -107,7 +128,7 @@ section#properties {
 	}
 
 	section#properties {
-		padding: 80px 0;
+		padding: 80px 16px;
 	}
 	img#info-about {
 		width: 200px;
@@ -148,6 +169,7 @@ section#properties {
 
 .slick-slide.slick-active div {
 	display: flex;
+	width: 100%;
 }
 
 .slick-active {
