--- a/src/App.scss
+++ b/src/App.scss
@@ -121,6 +121,12 @@ header {
 	section#about-us {
 		width: 100%;
 	}
+	div#how-make-money {
+		padding: 0 16px;
+	}
+	div#how-it-works {
+		padding: 0 16px;
+	}
 	div#privacy-policy {
 		flex-direction: column;
 	}
